--- a/MyList/Base.lproj/Main.storyboard
+++ b/MyList/Base.lproj/Main.storyboard
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Kjj-x5-jO3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--MainVC-->
+        <!--My Lister-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="MyList" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="MainVC" customModule="MyList" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="S3O-Nx-ObL">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -34,12 +35,99 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="S3O-Nx-ObL" secondAttribute="bottom" id="xJm-bM-d24"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="My Lister" id="Sh5-K1-uhg">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="Blg-gC-KaI"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="g1v-Nv-ZTq">
+                            <connections>
+                                <action selector="plusTapped:" destination="BYZ-38-t0r" id="uVf-MW-h9R"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="S3O-Nx-ObL" id="z5x-cS-uSw"/>
+                        <segue destination="v3r-aQ-chy" kind="show" identifier="addSegue" id="wQ1-07-bN4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+        </scene>
+        <!--Create TaskVC-->
+        <scene sceneID="t0J-yj-bdp">
+            <objects>
+                <viewController id="v3r-aQ-chy" customClass="CreateTaskVC" customModule="MyList" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bwL-Yg-7jA"/>
+                        <viewControllerLayoutGuide type="bottom" id="vWQ-Zy-zKb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uNq-Or-ybV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01S-Fd-acX">
+                                <rect key="frame" x="162.5" y="94" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AB1-XS-qAa">
+                                <rect key="frame" x="147.5" y="203" width="80" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3hq-e9-cya">
+                                <rect key="frame" x="56" y="134" width="263" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oma-BV-PTS">
+                                <rect key="frame" x="163" y="267" width="51" height="31"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RUX-5D-hiW">
+                                <rect key="frame" x="172" y="350" width="30" height="30"/>
+                                <state key="normal" title="Add"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Oma-BV-PTS" firstAttribute="centerX" secondItem="uNq-Or-ybV" secondAttribute="centerX" id="19U-Vg-5ns"/>
+                            <constraint firstItem="01S-Fd-acX" firstAttribute="top" secondItem="bwL-Yg-7jA" secondAttribute="bottom" constant="30" id="4gd-bq-gIk"/>
+                            <constraint firstItem="3hq-e9-cya" firstAttribute="leading" secondItem="uNq-Or-ybV" secondAttribute="leadingMargin" constant="40" id="B8k-e5-uCE"/>
+                            <constraint firstItem="RUX-5D-hiW" firstAttribute="centerX" secondItem="uNq-Or-ybV" secondAttribute="centerX" id="HKL-uS-zlg"/>
+                            <constraint firstItem="3hq-e9-cya" firstAttribute="centerX" secondItem="uNq-Or-ybV" secondAttribute="centerX" id="JzA-0Z-hAI"/>
+                            <constraint firstItem="01S-Fd-acX" firstAttribute="centerX" secondItem="uNq-Or-ybV" secondAttribute="centerX" id="ezt-a4-XND"/>
+                            <constraint firstItem="3hq-e9-cya" firstAttribute="top" secondItem="01S-Fd-acX" secondAttribute="bottom" constant="19" id="jBF-hL-9iF"/>
+                            <constraint firstItem="AB1-XS-qAa" firstAttribute="centerX" secondItem="uNq-Or-ybV" secondAttribute="centerX" id="jjs-Fo-txv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3hq-e9-cya" secondAttribute="trailing" constant="40" id="lTN-pi-leB"/>
+                            <constraint firstItem="Oma-BV-PTS" firstAttribute="top" secondItem="AB1-XS-qAa" secondAttribute="bottom" constant="43" id="lt3-fI-sTX"/>
+                            <constraint firstItem="AB1-XS-qAa" firstAttribute="top" secondItem="3hq-e9-cya" secondAttribute="bottom" constant="39" id="o3d-a1-oyy"/>
+                            <constraint firstItem="RUX-5D-hiW" firstAttribute="top" secondItem="Oma-BV-PTS" secondAttribute="bottom" constant="52" id="qAN-2Q-EFf"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ngn-Wg-0eL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1782" y="139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Au2-Ru-lQS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Kjj-x5-jO3" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aSJ-ow-G8Y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="k3V-1A-yK5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yr4-Z3-6gU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="246" y="139"/>
         </scene>
     </scenes>
 </document>
